dimagi-SalesforceFB/src/objects/ProjectCountry__c.object
<CustomObject>
    <description>Allows showing open and closed projects on the country page layout.</description>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Project__r.Implementing_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementing Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <formula>Project__r.Area_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Closed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country Closed</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Deployments (Closed)</relationshipLabel>
        <relationshipName>Project_Countries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Open__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country Open</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Deployments (Open)</relationshipLabel>
        <relationshipName>Project_Countries2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Deployments</relationshipLabel>
        <relationshipName>Project_Countries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>Project__r.Short_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Source__c</fullName>
        <formula>Project__r.Funder_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_Project_Space_Name__c</fullName>
        <formula>Project__r.Project_Space_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HQ Project Space Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Project__r.Product_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectId__c</fullName>
        <label>ProjectId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Active_Date__c</fullName>
        <formula>Project__r.Project_Active_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Location</label>
        <referenceTo>Project_Location__c</referenceTo>
        <relationshipLabel>Project Countries</relationshipLabel>
        <relationshipName>Project_Countries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <formula>Project__r.Project_Manager__r.FirstName  &amp; &apos; &apos; &amp;  Project__r.Project_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Countries</relationshipLabel>
        <relationshipName>Project_Countries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Area__c</fullName>
        <formula>Project__r.Sub_Area_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Area</label>
        <type>Text</type>
    </fields>
    <label>Project Country</label>
    <nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>Project Country Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>